--- a/Dart/lib/app.component.html
+++ b/Dart/lib/app.component.html
@@ -9,7 +9,7 @@
     </div>
   </header>
   <div  class="mdl-layout__drawer">
-    <span class="mdl-layout__title">Menu</span>
+    <span class="mdl-layout__title">{{title}}</span>
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link" [routerLink]="['Update']">Actualizacion</a>
       <a class="mdl-navigation__link" [routerLink]="['Reports']">Reportes</a>
@@ -20,6 +20,8 @@
   </div>
   <main class="mdl-layout__content">
     <div class="page-content">
+
+<input [(ngModel)]="title" placeholder="change title">
 
 <router-outlet></router-outlet>
 
