--- a/Dart/lib/app.component.html
+++ b/Dart/lib/app.component.html
@@ -8,7 +8,7 @@
       </nav>
     </div>
   </header>
-  <div  class="mdl-layout__drawer">
+  <div *ngIf="showMenu" class="mdl-layout__drawer">
     <span class="mdl-layout__title">{{title}}</span>
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link" [routerLink]="['Update']">Actualizacion</a>
@@ -20,8 +20,6 @@
   </div>
   <main class="mdl-layout__content">
     <div class="page-content">
-
-<input [(ngModel)]="title" placeholder="change title">
 
 <router-outlet></router-outlet>
 
