--- a/Dart/lib/providers/provider.component.html
+++ b/Dart/lib/providers/provider.component.html
@@ -8,7 +8,7 @@
             <div class="mdl-card__title">
               <h2 class="mdl-card__title-text">{{ provider.name }}</h2>
             </div>            
-            <div class="mdl-card__supporting-text">"Saldo: {{provider.saldo}}"</div>
+            <div class="mdl-card__supporting-text">Saldo: {{provider.saldo}}</div>
             <div class="mdl-card__actions mdl-card--border">
               <a href="#" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
                 Agregar saldo
