mejorando menu en pantallas reducidas, organizando clases

--- a/Dart/lib/Payes/pay.component.html
+++ b/Dart/lib/Payes/pay.component.html
@@ -33,6 +33,7 @@
     </div>  
     <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--0-col-phone"></div>
 
+    <div class="mdl-cell mdl-cell--12-col"></div>
 
     <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--0-col-phone"></div>
     <div class=" mdl-cell--4-col">
