Corrigiendo label flotante para cajas de texto

--- a/Dart/lib/login/login.component.html
+++ b/Dart/lib/login/login.component.html
@@ -1,3 +1,5 @@
+<form action="#">
+
 <div class="mdl-grid">      
         
         <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--0-col-phone"></div>
@@ -13,14 +15,14 @@
         <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--0-col-phone"></div>
 
         <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--0-col-phone"></div>            
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label mdl-cell mdl-cell--4-col">
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                 <input class="mdl-textfield__input" type="text" id="usuarioText">
                 <label class="mdl-textfield__label" for="usuarioText">Usuario...</label>
             </div>        
         <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--0-col-phone"></div>
 
         <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--0-col-phone"></div>
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label mdl-cell mdl-cell--4-col">
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                 <input class="mdl-textfield__input" type="password" id="passText">
                 <label class="mdl-textfield__label" for="passText">Contraseña...</label>
             </div>        
@@ -36,3 +38,5 @@
         <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--0-col-phone"></div>
 
 </div>
+
+</form>
